tests/NormalTests/paczka1/fuzzy1/46859176.err
Error in line 2: W7f A9 64,1
Error in line 16: ediI46Xk A9 0,7
Error in line 11: cqVhT S431 42,2
Error in line 20: wQb S615 62,6
Error in line 29: S615 S615 99,1
Error in line 33: W7f S615 323,9
Error in line 26: cqVhT A9 25,9
